--- a/calc2.html
+++ b/calc2.html
@@ -1223,6 +1223,9 @@
                 ClassResistType[i] = "resist";
             }
 	}
+	for(let i=nTarget;i<3;i++) {
+	    ClassResistType[i] = "notTarget";
+	}
         let model = {
             guid: guid,
             servantName: servantName,
