--- a/calc2.html
+++ b/calc2.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body id="content" onunload="setStorage()">
-    <div id="divServant">
+    <div id="divInfo">
         <table class="servant">
             <tr>
                 <td colspan="8">
