--- a/calc2.html
+++ b/calc2.html
@@ -304,7 +304,8 @@
                         <option value="10-9">极地服</option>
                         <option value="20-10">夏威夷衫</option>
                         <option value="35-11">新年服</option>
-                        <option value="0-12">宇航服</option>
+                        <option value="50-12">宇航服</option>
+			<option value="0-13">探险服</option>
                     </select>
                 </td>
                 <td>敌人1阵营</td>
@@ -1165,7 +1166,7 @@
                     cardBuff += 30;
                 }
 		break;
-	    case 12:
+	    case 13:
 		npGainBuff += 40;
 		if(cardColor == 1.5) {
 		    cardBuff += 35;
