Update new servants

--- a/calc2.html
+++ b/calc2.html
@@ -767,6 +767,10 @@
 		$("txtCardBuff").value -= -cardBuff;
 	    }
 	}
+	let npEffect = servant.npEffect;
+	if(npEffect && npEffect.accAttackBuff) {
+	    $("txtAttackBuff").value -= -npEffect.accAttackBuff;
+	}
     }
     //队友buff
     $("btnAddZhuge").onclick = function(){
