--- a/calc2.html
+++ b/calc2.html
@@ -439,7 +439,71 @@
                     <span id="spanOverkill3">100%</span>
                 </td>
             </tr>
+		<td colspan="8">你可以在上面的各文本框中自行输入队友buff（支持文本框内的四则运算），也可以使用下面的从者列表</td>
             <tr>
+		<td>队友1</td>
+		<td>
+		    <select id="ddlSupport1" onchange="initialEffects()">
+                        <option value=-1>|-------------------请选择从者-------------------|</option>
+                    </select>
+		</td>
+		<td>技能1</td>
+		<td>
+                    <select id="ddlSupport1Skill1" oldvalue=-1 onchange="changeSupport(1,1)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport1NoMiss1" onchange="randomSupport(1,1)">
+                        <input type="checkbox" id="ckSupport1NoMiss1" /> 命中
+                    </label>
+		</td>
+		<td>技能2</td>
+		<td>
+                    <select id="ddlSupport1Skill2" oldvalue=-1 onchange="changeSupport(1,2)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport1NoMiss2" onchange="randomSupport(1,2)">
+                        <input type="checkbox" id="ckSupport1NoMiss2" /> 命中
+                    </label>
+		</td>
+                <td>技能3</td>
+                <td>
+                    <select id="ddlSupport1Skill3" oldvalue=-1 onchange="changeSupport(1,3)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport1NoMiss3" onchange="randomSupport(1,3)">
+                        <input type="checkbox" id="ckSupport1NoMiss3" /> 命中
+                    </label>
+                </td>
             </tr>
             <tr>
                 <td colspan="8">
@@ -966,6 +1030,17 @@
     var cardNpBase = [1, 3, 0];
     //计算宝具伤害
     $("btnCalculate").onclick = function() {
+	$("txtAttackBuff").value = Math.round($("txtAttackBuff").value * 10) / 10;
+	$("txtEnemyDefence1").value = Math.round($("txtEnemyDefence1").value * 10) / 10;
+	$("txtEnemyDefence2").value = Math.round($("txtEnemyDefence2").value * 10) / 10;
+	$("txtEnemyDefence3").value = Math.round($("txtEnemyDefence3").value * 10) / 10;
+	$("txtCardBuff").value = Math.round($("txtCardBuff").value * 10) / 10;
+	$("txtCardResist1").value = Math.round($("txtCardResist1").value * 10) / 10;
+	$("txtCardResist2").value = Math.round($("txtCardResist2").value * 10) / 10;
+	$("txtCardResist3").value = Math.round($("txtCardResist3").value * 10) / 10;
+	$("txtNpStrength").value = Math.round($("txtNpStrength").value * 10) / 10;
+	$("txtSpecialAttack").value = Math.round($("txtSpecialAttack").value * 10) / 10;
+	$("txtNpGainBuff").value = Math.round($("txtNpGainBuff").value * 10) / 10;
 	let id = $("ddlServant").value;
         if (id == -1) {
             alert("请选择从者")
