--- a/calc2.html
+++ b/calc2.html
@@ -638,6 +638,136 @@
                 </td>
             </tr>
             <tr>
+		<td>队友4</td>
+		<td>
+		    <select id="ddlSupport4" onchange="initialEffects()">
+                        <option value=-1>|-------------------请选择从者-------------------|</option>
+                    </select>
+		</td>
+		<td>技能1</td>
+		<td>
+                    <select id="ddlSupport4Skill1" oldvalue=-1 onchange="changeSupport(4,1)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport4NoMiss1" onchange="randomSupport(4,1)">
+                        <input type="checkbox" id="ckSupport4NoMiss1" /> 命中
+                    </label>
+		</td>
+		<td>技能2</td>
+		<td>
+                    <select id="ddlSupport4Skill2" oldvalue=-1 onchange="changeSupport(4,2)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport4NoMiss2" onchange="randomSupport(4,2)">
+                        <input type="checkbox" id="ckSupport4NoMiss2" /> 命中
+                    </label>
+		</td>
+                <td>技能3</td>
+                <td>
+                    <select id="ddlSupport4Skill3" oldvalue=-1 onchange="changeSupport(4,3)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport4NoMiss3" onchange="randomSupport(4,3)">
+                        <input type="checkbox" id="ckSupport4NoMiss3" /> 命中
+                    </label>
+                </td>
+            </tr>
+            <tr>
+		<td>队友5</td>
+		<td>
+		    <select id="ddlSupport5" onchange="initialEffects()">
+                        <option value=-1>|-------------------请选择从者-------------------|</option>
+                    </select>
+		</td>
+		<td>技能1</td>
+		<td>
+                    <select id="ddlSupport5Skill1" oldvalue=-1 onchange="changeSupport(5,1)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport5NoMiss1" onchange="randomSupport(5,1)">
+                        <input type="checkbox" id="ckSupport5NoMiss1" /> 命中
+                    </label>
+		</td>
+		<td>技能2</td>
+		<td>
+                    <select id="ddlSupport5Skill2" oldvalue=-1 onchange="changeSupport(5,2)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport5NoMiss2" onchange="randomSupport(5,2)">
+                        <input type="checkbox" id="ckSupport5NoMiss2" /> 命中
+                    </label>
+		</td>
+                <td>技能3</td>
+                <td>
+                    <select id="ddlSupport5Skill3" oldvalue=-1 onchange="changeSupport(5,3)">
+                        <option value=-1>无</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
+                        <option value=5>6</option>
+                        <option value=6>7</option>
+                        <option value=7>8</option>
+                        <option value=8>9</option>
+                        <option value=10>10</option>
+                    </select>
+                    <label for="ckSupport5NoMiss3" onchange="randomSupport(5,3)">
+                        <input type="checkbox" id="ckSupport5NoMiss3" /> 命中
+                    </label>
+                </td>
+            </tr>
+            <tr>
                 <td colspan="8">
                     <select id="ddlOverkillMode"/>
                         <option value=0>输入鞭尸数</option>
